# omega_predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
models/: IntraDayForexPredictor_v4.0.10.pt
scripts/: set_up_folders.py  tree_party.py
services/data_service/: data_handler_service.py
services/model_service/: base_nn_service.py  norm_classifier_service.py  simple_classifier_service.py
services/prediction_service/: model_registry_service.py  model_wrapper_service.py
src/omega_predictor/services/data_service/: data_handler_service.py
src/omega_predictor/services/model_service/: norm_classifier_service.py  simple_classifier_service.py
src/omega_predictor/services/prediction_service/: model_registry_service.py  model_wrapper_service.py
src/svc/data/: data_handler.py  data_loader.py
src/svc/model/: norm_classifier.py  simple_classifier.py
src/svc/pred/: model_registry.py  model_wrapper.py
