[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omega_predictor"
version = "0.1.0"
description = "A Neural Network predictor"
authors = [{name = "Francis Neequaye", email = "francis.neequaye@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
    "numpy",
    "pandas",
    # Add other dependencies as needed
]

[project.urls]
homepage = "https://github.com/frankie336/omega_predictor"
repository = "https://github.com/frankie336/omega_predictor"
# documentation = "https://your.documentation.url"

[tool.setuptools]
package_dir = {"": "src"}
packages = find_namespace_packages(where="src")
