[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "omega_predictor"
authors = [
    {name = "Francis Neequaye", email = "francis.neequaye@gmail.com"},
]
description = "A Neural Network Predictor"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas", "numpy",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
my-script = "omega_predictor.module:function"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
